--- a/openair2/LAYER2/rlc.new/Makefile
+++ b/openair2/LAYER2/rlc.new/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-g -Wall
 
-OBJS=rlc_entity.o rlc_entity_am.o rlc_pdu.o main.o
+OBJS=rlc_entity.o rlc_entity_am.o rlc_pdu.o rlc_sdu.o main.o
 
 test_am : $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^
